--- a/Stiven_Santana_P1_AP1/appsettings.json
+++ b/Stiven_Santana_P1_AP1/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "SqlConStr": "workstation id=Aplicada1Db.mssql.somee.com;packet size=4096;user id=Stivensantana_SQLLogin_1;pwd=mnrngpqs9s;data source=Aplicada1Db.mssql.somee.com;persist security info=False;initial catalog=Aplicada1Db;TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
